# porta

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_GUIDE.md  README.md  docker-compose.override.yml  docker-compose.yml  porta.service
backend/: .gitignore  Dockerfile  app.py  db.py  models.py  pyproject.toml  pytest.ini  schemas.py  test_agent_pipeline_old.py  test_pipeline.py  test_report.md
backend/clients/: __init__.py  cache_client.py  email_client.py  finnhub_client.py  stock_client.py  supabase_client.py
backend/data/: db.py  models.py  porta.db  schema.sql  schemas.py
backend/data/sql_history/: add_email_verified.sql  add_reports_table.sql  (+6 more)
backend/dependencies/: auth.py
backend/graph/: app.py  feedback.py  regime.py  root_graph.py  schemas.py
backend/repo/: __init__.py  base_repo.py  portfolio_repo.py  position_repo.py  recommendation_repo.py  report_repo.py  schedule_repo.py  transaction_repo.py  user_repo.py
backend/routers/: agent.py  agent_feedback.py  auth.py  health.py  portfolio.py  position.py  report.py  schedule.py  stock.py  user.py
backend/scripts/: backfill_default_schedules.py  dev_env.py  install-systemd.sh  run-celery-beat.sh  run-celery-worker.sh  run-celery.sh  run-redis.sh  run-server.sh  run_e2e.py  seed_dev.py  stack-logs.sh  stack-restart.sh  stack-start.sh  stack-stop.sh
backend/tests/: conftest.py
backend/usecase/: __init__.py  portfolio_usecase.py  position_usecase.py  report_usecase.py  schedule_usecase.py  task_usecase.py  user_usecase.py
backend/worker/: celeryconfig.py  constants.py  tasks.py  utils.py  worker.py
(+140 files in other folders)
